# mcp-handley-lab

./: CLAUDE.md  PKGBUILD  README.md  pyproject.toml
.claude/skills/recursive-llm/: SKILL.md
src/mcp_handley_lab/common/: config.py  terminal.py
src/mcp_handley_lab/email/: common.py  tool.py
src/mcp_handley_lab/email/extraction/: __init__.py
src/mcp_handley_lab/email/mbsync/: __init__.py  shared.py  tool.py
src/mcp_handley_lab/email/mutt/: capture.py  capture_utils.py  direct.py  shared.py  tool.py
src/mcp_handley_lab/email/notmuch/: shared.py  tool.py
src/mcp_handley_lab/google_calendar/: shared.py  tool.py
src/mcp_handley_lab/llm/: __init__.py  model_loader.py  registry.py  shared.py  tool.py
src/mcp_handley_lab/llm/embeddings/: __init__.py  shared.py  tool.py
src/mcp_handley_lab/llm/providers/claude/: adapter.py  models.yaml
src/mcp_handley_lab/llm/providers/gemini/: adapter.py  models.yaml
src/mcp_handley_lab/llm/providers/grok/: adapter.py  models.yaml
src/mcp_handley_lab/llm/providers/groq/: models.yaml
src/mcp_handley_lab/llm/providers/mistral/: adapter.py  models.yaml
src/mcp_handley_lab/llm/providers/openai/: adapter.py  models.yaml
src/mcp_handley_lab/loop/: __init__.py  backends.py  client.py  daemon.py  shared.py  tool.py
src/mcp_handley_lab/messenger/: server.py
src/mcp_handley_lab/microsoft/visio/: __init__.py  shared.py  tool.py
src/mcp_handley_lab/otter/: shared.py  tool.py
tests/: conftest.py
tests/integration/: test_groq_integration.py  test_llm_integration.py  test_mistral_integration.py  test_system_prompt_integration.py  test_video_generation_integration.py
tests/messenger/: test_commands.py
tests/unit/: test_claude_unit.py  test_email_search.py  test_gemini_unit.py  test_google_calendar_search.py  test_google_calendar_send_updates.py  test_grok_unit.py  test_mistral_unit.py  test_model_loader.py  test_openai_unit.py  test_otter_formatting.py  test_terminal_launcher.py  test_video_generation.py
